--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
 {
+  "name": "mws_restaurant_reviews",
+  "version": "0.3.0",
   "licence": "MIT",
   "scripts": {
     "server": "node server --prefix Server",
